вношу финальные правки

--- a/source/index.html
+++ b/source/index.html
@@ -29,7 +29,8 @@
           </picture>
         </a>
         <nav class="main-nav main-nav--closed main-nav--nojs">
-          <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+          <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть
+              меню</span></button>
           <div class="main-nav__wrapper">
             <ul class="main-nav__list site-list">
               <li class="site-list__item site-list__item--advantage">
@@ -66,15 +67,13 @@
         <div class="description__wrapper">
           <div class="description__wrapper-text">
             <h2>Путешествие на край Земли</h2>
-            <p>Это волшебное путешествие <br class="description__br-mob"> поможет <br class="description__br-tab"> вам
-              познакомиться <br class="description__br description__br-mob"> поближе <br class="description__br-tab">
-              судивительным миром <br class="description__br-mob"> Антарктики. <br class="description__br-tab"> Наш
-              круизный <br class="description__br description__br-mob"> лайнер отвезет вас <br
-                class="description__br-tab"> на край <br class="description__br-mob"> Земли,
-              где вы сможете <br class="description__br-tab"> увидеть: <br class="description__br description__br-mob">
-              ледяные айсберги, <br class="description__br-tab"> несколько <br class="description__br-mob"> видов
-              пингвинов, китов, <br class="description__br description__br-tab"> морских <br
-                class="description__br-mob"> котикови многое другое.</p>
+            <p>Это волшебное путешествие поможет вам
+              познакомиться поближе
+              судивительным миром Антарктики. Наш
+              круизный лайнер отвезет вас на край Земли,
+              где вы сможете увидеть:
+              ледяные айсберги, несколько видов
+              пингвинов, китов, морских котикови многое другое.</p>
           </div>
           <div class="description__wrapper-img">
             <picture>
@@ -91,7 +90,7 @@
               <source media="(max-width: 1365px)" srcset="img/penguins-tablet@1x.jpg 1x, img/penguins-tablet@2x.jpg 2x">
 
               <img src="img/penguins-desktop@1x.jpg" srcset="img/penguins-desktop@2x.jpg 2x" width="560" height="301"
-                alt="Няшные пингвины в Антарктике">
+                alt="пингвины в Антарктике">
             </picture>
           </div>
         </div>
@@ -116,13 +115,8 @@
                 </div>
                 <h3>Небольшой круизный лайнер</h3>
                 <p>
-                  Круизный лайнер, <br class="features__br-tab"> рассчитанный <br class="features__br-mob"> всего <br
-                    class="features__br features__br-tab"> лишь на
-                  300 гостей, <br class="features__br-tab features__br-mob"> поможет избежать <br
-                    class="features__br features__br-tab">
-                  шума <br class="features__br-mob"> и очередей <br class="features__br-tab"> и даст возможность <br
-                    class="features__br features__br-mob"> насладиться
-                  видами <br class="features__br-tab"> и природой. <br class="features__br-mob">
+                  Круизный лайнер, рассчитанный всего лишь на 300 гостей, поможет избежать шума и очередей и даст
+                  возможность насладиться видами и природой.
                 </p>
               </li>
               <li class="list-features__item list-features__item--ticks">
@@ -135,12 +129,8 @@
                 </div>
                 <h3>Система все включено</h3>
                 <p>
-                  Все наши круизы <br class="features__br-tab"> работают <br class="features__br features__br-mob"> по
-                  системе <br class="features__br-tab"> “Все Включено”. <br
-                    class="features__br features__br-tab features__br-mob"> Великолепные
-                  блюда <br class="features__br-tab features__br-mob"> и
-                  безлимитный <br class="features__br"> бар <br class="features__br-tab"> доступны <br
-                    class="features__br-mob"> для вас <br class="features__br-tab"> 24 часа.
+                  Все наши круизы работают по системе “Все Включено”. Великолепные блюда и безлимитный бар доступны для
+                  вас 24 часа.
                 </p>
               </li>
               <li class="list-features__item list-features__item--boat">
@@ -153,13 +143,8 @@
                 </div>
                 <h3>Экскурсионные туры на Zodiac</h3>
                 <p>
-                  Экскурсионные туры <br class="features__br-tab"> к берегам <br class="features__br features__br-mob">
-                  Антарктиды <br class="features__br-tab"> совершаются <br class="features__br features__br-mob"> на <br
-                    class="features__br-tab">
-                  оборудованных <br class="features__br-tab"> лодках <br class="features__br-mob"> типа <br
-                    class="features__br features__br-mob"> Zodiac <br class="features__br-tab">
-                  в сопровождении <br class="features__br features__br-tab"> опытных <br class="features__br-tab">
-                  экскурсоводов.
+                  Экскурсионные туры к берегам Антарктиды совершаются на оборудованных лодках типа Zodiac в
+                  сопровождении опытных экскурсоводов.
                 </p>
               </li>
 
@@ -764,7 +749,8 @@
 
               <div class="form__field form__field-check">
                 <input class="visually-hidden form__checkbox" id="check" type="checkbox" name="check" required>
-                <label for="check">Я согласен на обработку <br class="booking__br"> моих персональных данных</label>
+                <label for="check">Я согласен на обработку <br class="booking__br"> моих персональных
+                  данных</label>
               </div>
               <button class="form__button" id="btn" type="submit" aria-label="Оставить заявку"><span>Оставить
                   заявку</span></button>
@@ -810,7 +796,7 @@
 
             <div class="contacts__address">
               <h3 class="visually-hidden">Адрес</h3>
-              <span>г. Санкт Петербург, ул.БольшаяКонюшенная, 20/1</span>
+              <span>г. Санкт Петербург, ул.Большая Конюшенная, 20/1</span>
             </div>
 
             <div class="contacts__phone">
@@ -842,7 +828,8 @@
                   <a class="navigation-list__link navigation-list__link--booking" href="#">Направления</a>
                 </li>
                 <li class="navigation-list__item">
-                  <a class="navigation-list__link navigation-list__link--catalog" href="#">Ближайшие круизы</a>
+                  <a class="navigation-list__link navigation-list__link--catalog" href="#">Ближайшие
+                    круизы</a>
                 </li>
                 <li class="navigation-list__item">
                   <a class="navigation-list__link navigation-list__link--contacts" href="#">Контакты</a>
