--- a/source/index.html
+++ b/source/index.html
@@ -10,14 +10,14 @@
   <meta name="description"
     content="Путешествия на край Земли. Узнать о ближайших круизах в Антарктику. Экскурсионные туры. Забронировать круиз.">
   <link href="css/style.min.css" rel="stylesheet">
-  <link rel="preload" href="fonts/montserrat-bold.woff">
-  <link rel="preload" href="fonts/montserrat-bold.woff2">
-  <link rel="preload" href="fonts/montserrat-medium.woff2">
-  <link rel="preload" href="fonts/montserrat-medium.woff">
-  <link rel="preload" href="fonts/montserrat-regular.woff">
-  <link rel="preload" href="fonts/montserrat-regular.woff2">
-  <link rel="preload" href="fonts/montserrat-semibold.woff">
-  <link rel="preload" href="fonts/montserrat-semibold.woff2">
+  <link rel="preload" as="font" href="fonts/montserrat-bold.woff">
+  <link rel="preload" as="font" href="fonts/montserrat-bold.woff2">
+  <link rel="preload" as="font" href="fonts/montserrat-medium.woff2">
+  <link rel="preload" as="font" href="fonts/montserrat-medium.woff">
+  <link rel="preload" as="font" href="fonts/montserrat-regular.woff">
+  <link rel="preload" as="font" href="fonts/montserrat-regular.woff2">
+  <link rel="preload" as="font" href="fonts/montserrat-semibold.woff">
+  <link rel="preload" as="font" href="fonts/montserrat-semibold.woff2">
 
 </head>
 
@@ -855,7 +855,7 @@
 
               <div class="form__field form__field-check">
                 <input class="visually-hidden form__checkbox" id="check" type="checkbox" name="check" required>
-                <label for="check">Я согласен на обработку моих&nbsp;персональных&nbsp;данных
+                <label for="check">Я согласен на обработку моих&nbsp;персональных&nbsp;данных</label>
               </div>
               <button class="form__button" id="btn" type="submit" aria-label="Оставить заявку"><span>Оставить
                   заявку</span></button>
