--- a/source/index.html
+++ b/source/index.html
@@ -10,25 +10,14 @@
   <meta name="description"
     content="Путешествия на край Земли. Узнать о ближайших круизах в Антарктику. Экскурсионные туры. Забронировать круиз.">
   <link href="css/style.min.css" rel="stylesheet">
-
-  <script>
-    // Picture element HTML5 shiv
-    document.createElement("picture");
-  </script>
+  <link href="css/style.min.css" rel="stylesheet">
+  <link rel="preload" as="font" href="fonts/montserrat-bold.woff2">
+  <link rel="preload" as="font" href="fonts/montserrat-medium.woff2">
+  <link rel="preload" as="font" href="fonts/montserrat-regular.woff2">
+  <link rel="preload" as="font" href="fonts/montserrat-semibold.woff2">
 </head>
 
 <body>
-
-  <!-- Пример использования svg-спрайта -->
-
-  <!-- <div style="width: 100px; height: 100px; background-color: green;">
-        <svg class="test" width="24" height="14">
-          <use use xlink:href="#icon-menu-open"></use>
-        </svg>
-      </div> -->
-
-  <!-- svg-спрайт -->
-
   <svg style="display:none">
     <symbol viewBox="0 0 70 38" id="logo">
       <path fill-rule="evenodd" clip-rule="evenodd"
@@ -1003,7 +992,6 @@
     </div>
   </footer>
 
-  <script src="js/vendor.js"></script>
   <script src="js/main.js"></script>
 </body>
 
