--- a/source/index.html
+++ b/source/index.html
@@ -117,9 +117,9 @@
 
       <div class="about-us">
         <div class="about-us__wrapper">
-          <h1><span>Круизы</span> <span>в Антарктику</span></h1>
+          <h1>Круизы в Антарктику</h1>
           <p>
-            <span>Волшебный мир</span> <span>айсбергов и пингвинов</span>
+            Волшебный мир айсбергов и пингвинов
           </p>
         </div>
       </div>
@@ -223,7 +223,7 @@
       <div class="container">
         <div class="catalog__wrapper">
           <div class="catalog__wrapper-heading">
-            <h2>Ближайшие круизы</h2>
+            <h2 class='catalog__title'>Ближайшие круизы</h2>
           </div>
 
           <div class="catalog__list-wrapper">
@@ -271,28 +271,20 @@
                         Круиз "Астория"
                       </span>
                     </div>
-                    <div class="card__heading">
-                      <h4>Маршрут</h4>
-                    </div>
                     <div class="card__description">
+                      <h4>Маршрут</h4>
                       <p>Аргентина - Фолклендские острова - Антарктида</p>
                     </div>
-                    <div class="card__heading">
-                      <h4>Порт отправления</h4>
-                    </div>
                     <div class="card__description">
+                      <h4>Порт отправления</h4>
                       <p>Ушуайя</p>
                     </div>
-                    <div class="card__heading">
-                      <h4>Продолжительность</h4>
-                    </div>
                     <div class="card__description">
+                      <h4>Продолжительность</h4>
                       <p>11 дней</p>
                     </div>
-                    <div class="card__heading">
-                      <h4>Цена</h4>
-                    </div>
                     <div class="card__description card__description--cost">
+                      <h4>Цена</h4>
                       <p>от 11500 $</p>
                     </div>
                   </div>
@@ -345,28 +337,20 @@
                         Круиз “Элайн”
                       </span>
                     </div>
-                    <div class="card__heading">
-                      <h4>Маршрут</h4>
-                    </div>
                     <div class="card__description">
+                      <h4>Маршрут</h4>
                       <p>Аргентина - Фолклендские острова - Антарктида - Чили</p>
                     </div>
-                    <div class="card__heading">
-                      <h4>Порт отправления</h4>
-                    </div>
                     <div class="card__description">
+                      <h4>Порт отправления</h4>
                       <p>Буэнос-Айрес</p>
                     </div>
-                    <div class="card__heading">
-                      <h4>Продолжительность</h4>
-                    </div>
                     <div class="card__description">
+                      <h4>Продолжительность</h4>
                       <p>20 дней</p>
                     </div>
-                    <div class="card__heading">
-                      <h4>Цена</h4>
-                    </div>
                     <div class="card__description card__description--cost">
+                      <h4>Цена</h4>
                       <p>от 14500 $</p>
                     </div>
                   </div>
@@ -419,28 +403,20 @@
                         Круиз "Атлантис"
                       </span>
                     </div>
-                    <div class="card__heading">
-                      <h4>Маршрут</h4>
-                    </div>
                     <div class="card__description">
+                      <h4>Маршрут</h4>
                       <p>Аргентина - Южная Георгия и Южные Сандвичевы Острова - Антарктида</p>
                     </div>
-                    <div class="card__heading">
-                      <h4>Порт отправления</h4>
-                    </div>
                     <div class="card__description">
+                      <h4>Порт отправления</h4>
                       <p>Ушуайя</p>
                     </div>
-                    <div class="card__heading">
-                      <h4>Продолжительность</h4>
-                    </div>
                     <div class="card__description">
+                      <h4>Продолжительность</h4>
                       <p>15 дней</p>
                     </div>
-                    <div class="card__heading">
-                      <h4>Цена</h4>
-                    </div>
                     <div class="card__description card__description--cost">
+                      <h4>Цена</h4>
                       <p>от 14500 $</p>
                     </div>
                   </div>
@@ -493,28 +469,20 @@
                         Круиз "Одиссей"
                       </span>
                     </div>
-                    <div class="card__heading">
-                      <h4>Маршрут</h4>
-                    </div>
                     <div class="card__description">
+                      <h4>Маршрут</h4>
                       <p>Чили - Антарктида</p>
                     </div>
-                    <div class="card__heading">
-                      <h4>Порт отправления</h4>
-                    </div>
                     <div class="card__description">
+                      <h4>Порт отправления</h4>
                       <p>Пунта-Аренас</p>
                     </div>
-                    <div class="card__heading">
-                      <h4>Продолжительность</h4>
-                    </div>
                     <div class="card__description">
+                      <h4>Продолжительность</h4>
                       <p>13 дней</p>
                     </div>
-                    <div class="card__heading">
-                      <h4>Цена</h4>
-                    </div>
                     <div class="card__description card__description--cost">
+                      <h4>Цена</h4>
                       <p>от 9700 $</p>
                     </div>
                   </div>
@@ -567,28 +535,20 @@
                         Круиз "Олимпия"
                       </span>
                     </div>
-                    <div class="card__heading">
-                      <h4>Маршрут</h4>
-                    </div>
                     <div class="card__description">
+                      <h4>Маршрут</h4>
                       <p>Аргентина - Фолклендские острова - Южная Георгия - Антарктида</p>
                     </div>
-                    <div class="card__heading">
-                      <h4>Порт отправления</h4>
-                    </div>
                     <div class="card__description">
+                      <h4>Порт отправления</h4>
                       <p>Ушуайя</p>
                     </div>
-                    <div class="card__heading">
-                      <h4>Продолжительность</h4>
-                    </div>
                     <div class="card__description">
+                      <h4>Продолжительность</h4>
                       <p>21 день</p>
                     </div>
-                    <div class="card__heading">
+                    <div class="card__description">
                       <h4>Цена</h4>
-                    </div>
-                    <div class="card__description card__description--cost">
                       <p>от 18600 $</p>
                     </div>
                   </div>
@@ -641,28 +601,20 @@
                         Круиз "Аврора"
                       </span>
                     </div>
-                    <div class="card__heading">
-                      <h4>Маршрут</h4>
-                    </div>
                     <div class="card__description">
+                      <h4>Маршрут</h4>
                       <p>Аргентина - Антарктида - Чили</p>
                     </div>
-                    <div class="card__heading">
-                      <h4>Порт отправления</h4>
-                    </div>
                     <div class="card__description">
+                      <h4>Порт отправления</h4>
                       <p>Ушуайя</p>
                     </div>
-                    <div class="card__heading">
-                      <h4>Продолжительность</h4>
-                    </div>
                     <div class="card__description">
+                      <h4>Продолжительность</h4>
                       <p>14 дней</p>
                     </div>
-                    <div class="card__heading">
-                      <h4>Цена</h4>
-                    </div>
                     <div class="card__description card__description--cost">
+                      <h4>Цена</h4>
                       <p>от 11700 $</p>
                     </div>
                   </div>
@@ -715,28 +667,20 @@
                         Круиз "Леонор"
                       </span>
                     </div>
-                    <div class="card__heading">
-                      <h4>Маршрут</h4>
-                    </div>
                     <div class="card__description">
+                      <h4>Маршрут</h4>
                       <p>Чили - Южная Георгия - Антарктида - Аргентина</p>
                     </div>
-                    <div class="card__heading">
-                      <h4>Порт отправления</h4>
-                    </div>
                     <div class="card__description">
+                      <h4>Порт отправления</h4>
                       <p>Пунта-Аренас</p>
                     </div>
-                    <div class="card__heading">
-                      <h4>Продолжительность</h4>
-                    </div>
                     <div class="card__description">
+                      <h4>Продолжительность</h4>
                       <p>17 дней</p>
                     </div>
-                    <div class="card__heading">
-                      <h4>Цена</h4>
-                    </div>
                     <div class="card__description card__description--cost">
+                      <h4>Цена</h4>
                       <p>от 12500 $</p>
                     </div>
                   </div>
@@ -753,27 +697,21 @@
                   <div class="card__img">
                     <picture>
 
-                      <!-- 1x: 270px; 2x: 540px -->
                       <source type="image/webp" media="(max-width: 767px)"
                         srcset="img/cruise-8-mobile@1x.webp 1x, img/cruise-8-mobile@2x.webp 2x">
 
-                      <!-- 1x: 309px; 2x: 618px -->
-                      <source type="image/webp" media="(max-width: 1023px)"
+                      <source type="image/webp" media="(max-width: 1365px)"
                         srcset="img/cruise-8-tablet@1x.webp 1x, img/cruise-8-tablet@2x.webp 2x">
 
-                      <!-- 1x: 260px; 2x: 520px -->
                       <source type="image/webp"
                         srcset="img/cruise-8-desktop@1x.webp 1x, img/cruise-8-desktop@2x.webp 2x">
 
-                      <!-- 1x: 270px; 2x: 540px -->
                       <source media="(max-width: 767px)"
                         srcset="img/cruise-8-mobile@1x.jpg 1x, img/cruise-8-mobile@2x.jpg 2x">
 
-                      <!-- 1x: 309px; 2x: 618px -->
-                      <source media="(max-width: 1023px)"
+                      <source media="(max-width: 1365px)"
                         srcset="img/cruise-8-tablet@1x.jpg 1x, img/cruise-8-tablet@2x.jpg 2x">
 
-                      <!-- 1x: 260px; 2x: 520px -->
                       <img src="img/cruise-8-desktop@1x.jpg" srcset="img/cruise-8-desktop@2x.jpg 2x" width="260"
                         height="386" alt="Круиз Минион - 1">
                     </picture>
@@ -789,28 +727,20 @@
                         Круиз "Минион - 1"
                       </span>
                     </div>
-                    <div class="card__heading">
-                      <h4>Маршрут</h4>
-                    </div>
                     <div class="card__description">
+                      <h4>Маршрут</h4>
                       <p>Аргентина - Антарктида</p>
                     </div>
-                    <div class="card__heading">
-                      <h4>Порт отправления</h4>
-                    </div>
                     <div class="card__description">
+                      <h4>Порт отправления</h4>
                       <p>Ушуайя</p>
                     </div>
-                    <div class="card__heading">
-                      <h4>Продолжительность</h4>
-                    </div>
                     <div class="card__description">
+                      <h4>Продолжительность</h4>
                       <p>11 дней</p>
                     </div>
-                    <div class="card__heading">
-                      <h4>Цена</h4>
-                    </div>
                     <div class="card__description card__description--cost">
+                      <h4>Цена</h4>
                       <p>от 12300 $</p>
                     </div>
                   </div>
